--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sky-plus-hd.js",
+  "name": "sky-plus-hd",
   "version": "0.0.1",
   "description": "Node.js module for controlling and monitoring Sky+ HD set top boxes",
   "main": "lib/sky-plus-hd.js",
