Gihub / NPM packaging tidyup

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dalhundal/sky-plus-hd.js.git"
+    "url": "https://github.com/dalhundal/sky-plus-hd.git"
   },
   "keywords": [
     "SkyHD",
