--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "sky-plus-hd",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Node.js module for controlling and monitoring Sky+ HD set top boxes",
   "main": "lib/sky-plus-hd.js",
   "dependencies": {
     "underscore": "1.4.x",
     "html-entities": "1.0.x",
+    "winston": "0.6.x",
     "xml": "0.0.x",
     "xml2json": "0.3.x"
   },
