Fetch additional program details (season, episode, episode title, genres etc) - Could break easily, relies on screenscraping

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "html-entities": "1.0.x",
     "winston": "0.6.x",
     "xml": "0.0.x",
-    "xml2json": "0.3.x"
+    "xml2json": "0.3.x",
+    "cheerio": "0.10.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
