--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node lib/sky-plus-hd.js"
   },
   "repository": {
     "type": "git",
