--- a/package.json
+++ b/package.json
@@ -4,7 +4,17 @@
   "description": "Node.js module for controlling and monitoring Sky+ HD set top boxes",
   "main": "lib/sky-plus-hd.js",
   "dependencies": {
-  
+    "ssdp": "0.0.1",
+    "ip": "~0.2.0",
+    "pretty-data": "~0.40.0",
+    "xml": "0.0.12",
+    "underscore": "~1.5.2",
+    "q": "~1.0.0",
+    "portfinder": "~0.2.1",
+    "underscore.string": "~2.3.3",
+    "xml2js": "~0.4.1",
+    "node-ssdp": "~0.2.0",
+    "request": "~2.33.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
