--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "celeri": "~0.3.3",
     "freeport": "^1.0.4",
     "ip": "~0.2.0",
+    "jsonfile": "^2.0.0",
     "node-ssdp": "^2.0.1",
     "portfinder": "~0.2.1",
     "pretty-data": "~0.40.0",
